# containerized-freshbooks-mcp

./: .dockerignore  .env.example  .gitignore  CALL_PROCESSOR_SETUP.md  CLAUDE.md  Dockerfile  Dockerfile.processor  GETTING_STARTED.md  README.md  SETUP.md  docker-compose.yml  docker-start.ps1  docker-start.sh  docker.env.example  pyproject.toml  requirements-processor.txt
.claude/skills/curate/: SKILL.md
.claude/skills/ingest/: SKILL.md
call_processor/: actions.py  calendar_reminder.py  config.py  extractor.py  main.py  notifier.py  pipeline.py  scheduler.py  transcriber.py  watcher.py
freshbooks_mcp/: __init__.py  auth_manager.py  config.py  freshbooks_client.py  models.py  server.py  token_store.py  transformers.py
knowledge-base/: customers.md  decisions.md  faq.md  open-loops.md  people.md  services.md  snapshot.md
scripts/: smoke.py  test_processor.py
tests/: test_auth_manager.py  test_client.py  test_config.py  test_models.py  test_server.py  test_token_store.py  test_transformers.py
