[project]
name = "freshbooks-timesheet-mcp"
version = "0.1.0"
description = "MCP server to check and log timesheets in FreshBooks"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "httpx>=0.27.0",
    "keyring>=25.0.0",
    "cryptography>=42.0.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.21.0",
]

[project.scripts]
freshbooks-mcp = "freshbooks_mcp.server:main"
freshbooks-mcp-auth = "freshbooks_mcp.auth_manager:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["freshbooks_mcp"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "auto"
